--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,117 @@
+@import url('https://fonts.googleapis.com/css?family=Droid+Sans|Ubuntu|Asap');
+
+.header {
+	width:100%;
+	height:13%;
+	background-color:#EDEDED;
+}
+
+.heading {
+	display:inline;
+	line-height:95.5px;
+	margin-left:50px;
+}
+
+body {
+    font-family:"Ubuntu";
+}
+
 .error-margin-left {
 	margin-left:20px;
+}
+
+.navbar-container {
+	width:98%;
+	height:100%;
+	float:right;
+}
+
+.navbar-wrapper {
+	width:100%;
+	height:5.6%;
+	background-color:#E3E3E3;
+}
+
+.navbar-filler {
+	width:2%;
+	height:100%;
+	float:right;
+	border-bottom: 1px solid #ddd;
+}
+
+.float-left {
+	float:left;
+}
+
+.float-right {
+	float:right;
+}
+
+.float-bottom {
+/*	bottom:0;
+*/}
+
+.logout-header {
+	margin:0;
+	height:30%;
+	float:left;
+	line-height:95.5px;
+}
+
+.logout-button {
+	/*height:100%;
+	width:100%;*/
+	
+}
+
+.vertical-center {
+	position:absolute;
+	display:inline;
+	margin-left:50px;
+	/*height:30%;
+	width:30%;*/
+	bottom:35%;
+	float:left;
+}
+
+.logout-container {
+	position:relative;
+	margin-right:50px;
+	width:20%;
+	height:100%;
+}
+
+.main {
+	width:100%;
+	height:81.4%;
+	background-color:#D6E3FF;
+}
+
+.home-section-container {
+	width:100%;
+	height:40%;
+}
+
+.home-section-header {
+	margin:0;
+	position:relative;
+	left:7%;
+	display:inline;
+}
+
+.team-header {
+	margin:0;
+	position:relative;
+	top:30%;
+}
+
+.team-header-container {
+	text-align:center;
+	height:20%;
+	width:100%;
+}
+
+.roster-container {
+	height:80%;
+	width:100%;
 }
