--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,19 +99,19 @@ body {
 	display:inline;
 }
 
-.team-header {
+.top-header {
 	margin:0;
 	position:relative;
 	top:35%;
 }
 
-.team-header-container {
+.top-header-container {
 	text-align:center;
 	height:20%;
 	width:100%;
 }
 
-.roster-container {
+.content-container-lg {
 	height:80%;
 	width:100%;
 
@@ -122,4 +122,12 @@ body {
 	width:80%;
 	left:10%;
 	background-color:white;
+}
+
+#account-title {
+	float:right;
+}
+
+h4.info {
+	margin-left:35px;
 }
