Added add-results feature on coach side

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -81,14 +81,17 @@ body {
 }
 
 .main {
+	position:relative;
 	width:100%;
 	height:81.4%;
 	background-color:#D6E3FF;
+	overflow: scroll;
 }
 
 .home-section-container {
 	width:100%;
 	height:40%;
+	overflow:hidden;
 }
 
 .home-section-header {
@@ -113,7 +116,7 @@ body {
 .content-container-lg {
 	height:80%;
 	width:100%;
-
+	position:relative;
 }
 
 .roster-table {
@@ -149,4 +152,94 @@ h4.info {
 #login-header {
 	margin-top: 30px;
 	margin-bottom:30px;
+}
+
+.footer {
+	position:absolute;
+	bottom:0;
+	height:20%;
+	width:100%;
+}
+
+.add-button {
+	float:right;
+	display:inline-block;
+	margin-left:20px;
+}
+
+.form-container {
+	position:absolute;
+	width:60%;
+	height:100%;
+	left:20%;
+}
+
+.button-container {
+	float:right;
+	width:30%;
+	height:20%;
+	position:absolute;
+	left:65%;
+	bottom:35%;
+}
+
+.btn-bottom-right {
+	position:absolute;
+	float:right;
+	left:85%;
+	top:20%;
+}
+
+#plus {
+	background: url('/images/add-button-hi.png');
+	height:35px;
+	width:35px;
+}
+
+/* .squaredFour */
+.squaredFour {
+  display:block;
+  margin: 0 auto;
+  position: relative;
+}
+.squaredFour label {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #fcfff4;
+  background: -webkit-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+  background: linear-gradient(to bottom, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+  border-radius: 4px;
+  box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
+}
+.squaredFour label:after {
+  content: '';
+  width: 9px;
+  height: 5px;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  border: 3px solid #333;
+  border-top: none;
+  border-right: none;
+  background: transparent;
+  opacity: 0;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+.squaredFour label:hover::after {
+  opacity: 0.5;
+}
+.squaredFour input[type=checkbox] {
+  visibility: hidden;
+}
+.squaredFour input[type=checkbox]:checked + label:after {
+  opacity: 1;
+}
+
+.event {
+	margin-bottom:20px;
 }
