--- a/public/css/main.css
+++ b/public/css/main.css
@@ -85,7 +85,7 @@ body {
 	width:100%;
 	height:81.4%;
 	background-color:#D6E3FF;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 
 .home-section-container {
@@ -124,6 +124,14 @@ body {
 	width:80%;
 	left:10%;
 	background-color:white;
+}
+
+.table-container {
+	position:relative;
+	width:80%;
+	height:75%;
+	left:10%;
+	overflow-y:scroll;
 }
 
 #account-title {
@@ -242,4 +250,42 @@ h4.info {
 
 .event {
 	margin-bottom:20px;
+}
+
+.half-page {
+	width:50%;
+	height:80%;
+	float:left;
+}
+
+.half-header-container {
+	height:8%;
+	width:100%;
+	position:relative;
+	top:0;
+	text-align:center;
+}
+
+.half-content {
+	height:92%;
+	width:100%;
+	padding:25px;
+	position:relative;
+}
+
+.list-container {
+	display:block;
+	margin-top:20px;
+	width:80%;
+	position:relative;
+	left:10%;
+}
+
+.minus {
+	height:25px;
+	width:25px;
+}
+
+.table {
+	background-color:white;
 }
