--- a/public/css/main.css
+++ b/public/css/main.css
@@ -105,12 +105,14 @@ body {
 	margin:0;
 	position:relative;
 	top:35%;
+	display:inline;
 }
 
 .top-header-container {
 	text-align:center;
 	height:20%;
 	width:100%;
+	position:relative;
 }
 
 .content-container-lg {
@@ -288,4 +290,11 @@ h4.info {
 
 .table {
 	background-color:white;
+}
+
+.back-button {
+	margin-right:50px;
+	position:absolute;
+	bottom:40%;
+	right:0;
 }
