Team password only for coaches, include/exclude relay splits on team bests

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -334,3 +334,13 @@ h4.info {
 .entry {
 	padding-bottom:15px;	
 }
+
+.inline-block {
+	display:inline-block;
+}
+
+#include_relays {
+	position:relative;
+	top:2px;
+	margin-left:7px;
+}
