--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,6 +17,11 @@ body {
     font-family:"Ubuntu";
 }
 
+.error-container {
+	width:100%;
+	height:10%;
+}
+
 .error-margin-left {
 	margin-left:20px;
 }
@@ -48,10 +53,6 @@ body {
 	float:right;
 }
 
-.float-bottom {
-/*	bottom:0;
-*/}
-
 .logout-header {
 	margin:0;
 	float:left;
@@ -69,7 +70,7 @@ body {
 .header-container {
 	margin-right:50px;
 	padding-top:30px;
-	width:20%;
+	width:25%;
 	height:100%;
 	float:right;
 }
